[SCREEN-109] Fix buttons alignemt

--- a/client/src/app/venues/venues-tree-view/venues-tree-view.component.sass
+++ b/client/src/app/venues/venues-tree-view/venues-tree-view.component.sass
@@ -72,4 +72,4 @@
 
     .buttons-container
       margin-left: auto
-      width: 22%
+      width: 23%
